@@ -144,6 +144,7 @@ Not ideal indeed, but probably the best of what we can achieve.
 ** {doc-base-url}/Hash/Except[#except!]
 ** {doc-base-url}/Hash/Only[#only]
 ** {doc-base-url}/Hash/Only[#only!]
+** {doc-base-url}/Hash/Recurse[#recurse]
 ** {doc-base-url}/Hash/Rekey[#rekey]
 ** {doc-base-url}/Hash/Rekey[#rekey!]
 ** {doc-base-url}/Hash/SymbolizeKeys[#symbolize_keys]
